--- a/src/dev.scss
+++ b/src/dev.scss
@@ -1,6 +1,6 @@
 *{margin: 0;padding:0;}
 ul,li{list-style: none;}
-
+@import '../bower_components/webkit-sass-flexbox-grid/dist/webkit-sass-flexbox-grid.scss';
 .hello-react-layout-tmb{
   color:#F00;
   padding:100px 20px;
